err/lpbm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyRSS2Gen-1.1.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lpbm'...
Listing './lib/python3.5/site-packages/lpbm/models'...
Listing './lib/python3.5/site-packages/lpbm/modules'...
Listing './lib/python3.5/site-packages/lpbm/themes'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/css'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/fonts'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/images'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/js'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/templates'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/templates/articles'...
Listing './lib/python3.5/site-packages/lpbm/themes/bootstrap/templates/authors'...
Listing './lib/python3.5/site-packages/lpbm/themes/default'...
Listing './lib/python3.5/site-packages/lpbm/themes/default/css'...
Listing './lib/python3.5/site-packages/lpbm/themes/default/images'...
Listing './lib/python3.5/site-packages/lpbm/themes/default/templates'...
Listing './lib/python3.5/site-packages/lpbm/themes/default/templates/articles'...
Listing './lib/python3.5/site-packages/lpbm/themes/default/templates/authors'...
Listing './lib/python3.5/site-packages/lpbm-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
